tests/single_instruction_translation_validation/mcsema/register-variants/pcmpeqd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:196:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %18)
            ^
0.02user 0.01system 0:00.02elapsed 110%CPU (0avgtext+0avgdata 28028maxresident)k
0inputs+16outputs (0major+3280minor)pagefaults 0swaps
